src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
/* ============================================== */
/* CSS for control sap.uxap/ObjectPageSubSection  */
/* Base theme                                     */
/* ============================================== */

.sapUxAPObjectPageSubSection {
	position: relative;
}

.sapUxAPObjectPageSubSection:not(.sapUxAPObjectPageSubSectionPromoted) {
	padding-top: 1rem;
	box-sizing: border-box;
}

.sapUxAPObjectPageSubSection.sapUxAPObjectPageSubSectionStashed .sapUxAPBlockContainer > .sapUiRespGrid:empty,
/* Blockbase is used */
.sapUxAPObjectPageSubSection.sapUxAPObjectPageSubSectionStashed .sapUxAPBlockContainer > .sapUiRespGrid > div > div:empty {
	height: 20vh;
}

.sapUxAPObjectPageSubSectionHeader {
	width: 100%;
}

.sapUxAPObjectPageSubSection .sapUxAPObjectPageSubSectionHeader {

	.sapMTB.sapUxAPObjectPageSubSectionHeaderToolbar {
		background-color: var(--sapBackgroundColor);
		height: auto;
		min-height: 2.75rem;
	}

	position: sticky;
	top: 0;
	z-index: 5;
}

.sapUiRtaMode .sapUxAPObjectPageSubSection .sapUxAPObjectPageSubSectionHeader {
	position: static;
}

.sapUxAPObjectPageSubSectionHeader > .sapMBtn {
	margin-left: 0.5rem;
}

.sapUxAPObjectPageSubSectionHeader .sapMTB {
	padding-left: 1rem;
	padding-right: 0.75rem;
}

.sapUxAPObjectPageSubSectionHeader .sapMIBar :not(.sapMBtnDisabled)>.sapMBtnInner.sapMBtnActive {
	border-color: var(--sapButton_Active_BorderColor);
}

.sapUxAPObjectPageSubSectionHeader .sapMIBar.sapMBtn:hover>.sapMBtnHoverable {
	background-color: var(--sapButton_Hover_Background);
}

.sapUxAPObjectPageSubSectionHeader {
	height: auto;
	word-wrap: break-word;
	padding: 0 2rem 0 2rem;
	display: flex;
	width: 100%;
	box-sizing: border-box;
}

.sapUxAPObjectPageSubSectionTitle {
	height: 2.75rem;
	line-height: 2.5rem;
}

.sapUiRespGrid .sapUxAPObjectPageSubSectionHeader .sapMIBar .sapMBarChild:first-child {
	margin-left: 0
}

.sapUxAPSubSectionSeeMoreContainer {
	text-align: right;
	width: auto;
	float: right;
	height: auto;
}

.sapUxAPSubSectionSeeMoreButton {
	display: none;
}

.sapUxAPSubSectionSeeMoreButtonVisible {
	display: block;
}

/* public sapUxAPObjectPageSubSectionTransparentBackground class that sets background transparency */
.sapUxAPObjectPageSection .sapUxAPObjectPageSectionContainer .sapUxAPObjectPageSubSection.sapUxAPObjectPageSubSectionTransparentBackground .sapUxAPBlockContainer {
	background: transparent;
}

/* phone display */
.sapUxAPObjectPageLayout-Std-Phone .sapUxAPObjectPageSubSectionHeader,
html .sapUiContainer-Narrow .sapUxAPObjectPageSubSectionHeader {
	padding: 0 0.25rem 0 0;
}

/* tablet display */

.sapUxAPObjectPageLayout-Std-Tablet .sapUxAPObjectPageSubSectionHeader,
html .sapUiContainer-Medium .sapUxAPObjectPageSubSectionHeader {
	padding: 0 1.25rem 0 1rem;
}

/* Those styles apply Desktop and Desktop-XL.
Instead of writing
".sapUxAPObjectPageLayout.sapUxAPObjectPageLayout-Std-Desktop,
.sapUxAPObjectPageLayout.sapUxAPObjectPageLayout-Std-Desktop-XL",
we exclude the phone and tablet breakpoints.
Doing so will result in less generated CSS, as well as less future maintanance if Desktop-XXL is implemented.
*/

.sapUxAPObjectPageLayout:not(.sapUxAPObjectPageLayout-Std-Phone):not(.sapUxAPObjectPageLayout-Std-Tablet) {

	.sapUxAPObjectPageSubSectionHeader.titleOnLeftLayout {
		box-sizing: border-box;
		width: 25%;
		margin-right: 0;
		display: inline-block;
		vertical-align: top;
		overflow: visible;
	}

	.sapUxAPObjectPageSubSectionHeader.titleOnLeftLayout + .sapUxAPBlockContainer {
		width: -webkit-calc(~"75% - 2rem");
		width: calc(~"75% - 2rem");
		box-sizing: border-box;
		display: inline-block;
		margin-left: 0;
	}

	.sapUxAPObjectPageSubSectionHeader.titleOnLeftLayout .sapUxAPObjectPageSubSectionHeaderActions {
		float: none;
		display: inline-block;
		margin-left: 0;
		width: 100%;
	}

	.sapUxAPObjectPageSubSectionHeader.titleOnLeftLayout .sapUxAPObjectPageSubSectionHeaderActions > .sapMBtn:first-child {
		margin-left: 0;
	}
}
/* remove the padding of form content, since form itself is already in a grid-cell that provides the required extra spacing */
/* (1) if the direct child is a form container with a title, a more specific selector is needed: */
.sapUxAPBlockContainer .sapUiFormCLContainer > div.sapUiFormContainerTitle {
	padding-top: 0;
}

/* (2) if the direct child is a form container with a title, a more specific selector is needed for the title itself: */
.sapUxAPBlockContainer .sapUiFormCLContainer > div.sapUiFormContainerTitle > .sapUiFormTitle {
	line-height: 2rem;
	margin-bottom: 0;
}

.sapUxAPBlockContainer {

	.sapUiFormResGrid > .sapUiFormTitle {
		padding: 0;
	}

	.sapUiFormResGrid.sapUiFormToolbar > .sapMTB {
		padding: 0;
	}

	.sapUxAPObjectPageSubSectionAlignContent {
		margin-left: -@sapUiMarginSmall;
		margin-right: -@sapUiMarginSmall;
	}
}

.sapUxAPBlockContainer {
	padding: 0 2rem;
}

.sapUxAPObjectPageLayout-Std-Tablet .sapUxAPBlockContainer {
	padding: 0 1rem;
}

.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer {
	padding: 0 1rem;

	.sapUxAPObjectPageSubSectionAlignContent {
		margin-left: -@sapUiMarginSmall;
		margin-right: -@sapUiMarginSmall;
	}
}


.sapUxAPObjectPageLayout-Std-Phone .sapUxAPObjectPageSubSection {

	.sapUiRespGrid.sapUiRespGridMedia-Std-Phone.sapUiRespGridHSpace1 {
		padding: 0;
	}
	.sapUiRespGrid.sapUiRespGridMedia-Std-Phone.sapUiRespGridHSpace1 > .sapUiRespGridSpanS12 {
		margin: 0;
		width: 100%;
	}

	.sapUxAPBlockBase {
		margin-bottom: 1rem;
	}
}

.sapUxAPObjectPageSubSectionFitContainer {
	display: flex;
	flex-direction: column;
}

.sapUxAPObjectPageSubSectionFitContainer {

	.sapUxAPBlockContainer,
	.sapUxAPBlockContainer > .sapUiRespGrid,
	.sapUxAPBlockContainer > .sapUiRespGrid > *,
	.sapUxAPBlockContainer .sapUxAPBlockBase {
		box-sizing: border-box;
		height: 100%;
		margin-bottom: 0;
		margin-top: 0;
	}
}

/* compact size */
.sapUiSizeCompact {
	.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer .sapUiFormResGrid > div,
	.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer .sapUiFormCLContainer {
		padding: 1rem 0;
	}
}

/* Styles needed for wrapTitle property */
.sapUxAPObjectPageSubSection .sapUxAPObjectPageSubSectionHeader .sapUxAPObjectPageSubSectionTitle {
	height: auto;
	line-height: normal;
}

